--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        vectorDrawables.useSupportLibrary = true
     }
     signingConfigs {
         debug {
@@ -154,6 +155,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-crop-picker')
+    compile project(':rn-fetch-blob')
+    compile project(':react-native-image-picker')
     implementation project(':react-native-firebase')
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-vector-icons')
@@ -167,6 +171,8 @@ dependencies {
     implementation "com.google.android.gms:play-services-base:15.0.1"
     implementation "com.google.firebase:firebase-core:16.0.1"
     implementation "com.google.firebase:firebase-database:16.0.1"
+    implementation "com.google.firebase:firebase-auth:16.0.2"
+    implementation "com.google.firebase:firebase-storage:16.0.1"
 }
 
 // Run this once to be able to run the application with BUCK
