--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-firebase": "^4.3.8",
     "react-native-google-signin": "^1.0.0-rc3",
+    "react-native-image-crop-picker": "^0.21.1",
+    "react-native-image-picker": "^0.26.10",
+    "react-native-interactive-avatar": "^2.0.0",
     "react-native-linear-gradient": "^2.4.2",
     "react-native-phone-input": "^0.2.1",
     "react-native-star-rating": "^1.0.9",
+    "react-native-swiper-flatlist": "^1.0.7",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1",
     "react-navigation-material-bottom-tabs": "^0.3.0",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "rn-fetch-blob": "^0.10.13"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "7.0.0-beta.47",
