--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-app-intro-slider": "^1.0.1",
+    "react-native-calendar-select": "^0.1.2",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-firebase": "^4.3.8",
     "react-native-google-signin": "^1.0.0-rc3",
@@ -20,15 +21,18 @@
     "react-native-image-picker": "^0.26.10",
     "react-native-interactive-avatar": "^2.0.0",
     "react-native-linear-gradient": "^2.4.2",
+    "react-native-md5": "^1.0.0",
     "react-native-phone-input": "^0.2.1",
     "react-native-star-rating": "^1.0.9",
+    "react-native-swipeable-parallax-carousel": "^1.1.0",
     "react-native-swiper-flatlist": "^1.0.7",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.12.1",
     "react-navigation-material-bottom-tabs": "^0.3.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "rn-fetch-blob": "^0.10.13"
+    "rn-fetch-blob": "^0.10.13",
+    "tcomb-form-native": "^0.6.19"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "7.0.0-beta.47",
