--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "react-native-app-intro-slider": "^1.0.1",
     "react-native-calendar-select": "^0.1.2",
     "react-native-confirmation-code-input": "^1.0.4",
+    "react-native-easy-toast": "^1.1.0",
+    "react-native-fab": "^1.0.8",
     "react-native-firebase": "^4.3.8",
     "react-native-google-signin": "^1.0.0-rc3",
     "react-native-image-crop-picker": "^0.21.1",
     "react-native-image-picker": "^0.26.10",
+    "react-native-indicators": "^0.13.0",
     "react-native-interactive-avatar": "^2.0.0",
     "react-native-linear-gradient": "^2.4.2",
+    "react-native-material-menu": "^0.4.1",
     "react-native-md5": "^1.0.0",
     "react-native-phone-input": "^0.2.1",
     "react-native-star-rating": "^1.0.9",
