--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-navigation-material-bottom-tabs": "^0.3.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "rn-fetch-blob": "^0.10.13",
     "tcomb-form-native": "^0.6.19"
   },
