--- a/package.json
+++ b/package.json
@@ -7,30 +7,34 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^8.0.0",
     "firebase": "^5.4.2",
     "lodash": "^4.17.10",
     "native-base": "^2.8.0",
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-app-intro-slider": "^1.0.1",
+    "react-native-autocomplete-input": "^3.6.0",
     "react-native-calendar-select": "^0.1.2",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-easy-toast": "^1.1.0",
     "react-native-fab": "^1.0.8",
     "react-native-firebase": "^4.3.8",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-google-signin": "^1.0.0-rc3",
     "react-native-image-crop-picker": "^0.21.1",
     "react-native-image-picker": "^0.26.10",
     "react-native-indicators": "^0.13.0",
     "react-native-interactive-avatar": "^2.0.0",
     "react-native-linear-gradient": "^2.4.2",
+    "react-native-maps": "^0.22.0",
     "react-native-material-menu": "^0.4.1",
     "react-native-md5": "^1.0.0",
     "react-native-phone-input": "^0.2.1",
     "react-native-star-rating": "^1.0.9",
     "react-native-swipeable-parallax-carousel": "^1.1.0",
     "react-native-swiper-flatlist": "^1.0.7",
-    "react-native-vector-icons": "^5.0.0",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.12.1",
     "react-navigation-material-bottom-tabs": "^0.3.0",
     "react-redux": "^5.0.7",
